added color to the footer

--- a/TinDog-Store/css/styles.css
+++ b/TinDog-Store/css/styles.css
@@ -177,7 +177,7 @@ p{
 /* fotter */
 
 #footer{
-    background-color: snow;
+    background-color: #202040;
     color: black;
     text-align: center;
     padding: 4% 15%;
